# rules_pycross

./: .bazelignore  .bazelrc  .bazelversion  .gitattributes  .gitignore  .pre-commit-config.yaml  BUILD.bazel  CHANGELOG.md  CHANGELOG_V2.md  CONTRIBUTING.md  MODULE.bazel  README.md  REPO.bazel  WORKSPACE  fix_lint.py  internal_deps.bzl  pyproject.toml  update_pypi_requirements_bzl.sh
docs/: .bazelrc  BUILD.bazel  MODULE.bazel  config_settings.md  ext_backends.md  ext_cmake.md  ext_environments.md  ext_lock_file.md  ext_lock_import.md  ext_lock_repos.md  ext_maturin.md  ext_meson.md  ext_pdm.md  ext_pep517.md  ext_poetry.md  ext_pycross.md  ext_pylock.md  ext_setuptools.md  ext_setuptools_rust.md  ext_uv.md  maturin_rules.md  recipe-known-issues.md  rules.md  workspace_rules.md
e2e/build_maturin/: .bazelrc  BUILD.bazel  MODULE.bazel  pyproject.toml
e2e/build_maturin/tests/: BUILD.bazel  test_captcha.py
e2e/build_setuptools/: BUILD.bazel  MODULE.bazel  pyproject.toml
e2e/build_setuptools/tests/: BUILD.bazel  test_psycopg2.py  test_setproctitle.py
e2e/build_wheel/: BUILD.bazel  MODULE.bazel  WORKSPACE.bazel  pyproject.toml
e2e/bzlmod/: .bazelrc  BUILD.bazel  MODULE.bazel  pyproject.toml  test_all_whl_requirements.py
e2e/bzlmod/lock_file/: BUILD.bazel  pdm_lock.bzl  poetry_lock.bzl
e2e/bzlmod/pdm/: BUILD.bazel
e2e/bzlmod/uv/: BUILD.bazel
e2e/meson/: .bazelrc  BUILD.bazel  MODULE.bazel  pyproject.toml
e2e/meson/tests/: test_contourpy.py  test_numpy.py  test_pandas.py  test_pywavelets.py
e2e/patches_and_hooks/: .bazelignore  .bazelrc  .gitignore  MODULE.bazel  pyproject.toml  zstd.bzl
e2e/pure_python/: BUILD.bazel  pyproject.toml
e2e/pure_python/tests/: BUILD.bazel  test_filelock.py  test_pyproject_metadata.py  test_tomli.py
e2e/setuptools/: .bazelrc  BUILD.bazel  MODULE.bazel  pyproject.toml
e2e/setuptools/tests/: BUILD.bazel  test_psycopg2.py  test_setproctitle.py
e2e/smoke/: WORKSPACE.bazel
e2e/toolchains_llvm/: MODULE.bazel  WORKSPACE.bazel  pyproject.toml  test.sh
example/: BUILD.bazel  README.md  WORKSPACE  example_lock.bzl  pyproject.toml
example/tools/: BUILD.bazel  ipython.py
examples/bzlmod/: BUILD.bazel  MODULE.bazel  cowsay.py  poetry_lock.bzl  pyproject.toml  uv_lock.bzl
examples/crossenv/: BUILD.bazel  README.md  WORKSPACE  example_lock.bzl  pyproject.toml
examples/external_linking/: .bazelrc  .pdm.toml  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  bazel-zig-cc-dynamic-linker.patch  bazel-zig-cc-name-patterns.patch  example_lock.bzl  import_test.py  pyproject.toml
examples/external_linking/patches/: aspect_bazel_lib_bazel_9_compatibility.patch  bazel-zig-cc-mcpu.patch  llvm_http_bsdtar_archive_tolerant.patch  llvm_osx_exclude_cpp_headers.patch  (+4 more)
pycross/: BUILD.bazel  aspects.bzl  backend.bzl  backend_repo.bzl  defs.bzl  repositories.bzl  toolchain.bzl  workspace.bzl
pycross/backends/: BUILD.bazel  cmake.bzl  maturin.bzl  meson.bzl  pep517.bzl  setuptools.bzl
pycross/config_settings/: BUILD.bazel
pycross/extensions/: BUILD.bazel  backends.bzl  cmake.bzl  environments.bzl  lock.bzl  lock_file.bzl  lock_import.bzl  lock_repos.bzl  meson.bzl  pdm.bzl  poetry.bzl  pycross.bzl  pylock.bzl  setuptools.bzl  uv.bzl
pycross/hooks/: BUILD.bazel
pycross/private/: BUILD.bazel  backend_registry_repo.bzl  backends.bzl  build_recipe.bzl  cc_toolchain_util.bzl  console_script.bzl  cycle_dep_needed.bzl  cycle_deps.bzl  cycle_member_marker_deps.bzl  debug.bzl  deps_toml_repo.bzl  dist_info.bzl  environments.bzl  format_extension.bzl  generate_cargo_lock.bzl  git_file.bzl  internal.bzl  internal_repo.bzl  interpreter_version.bzl  json_file_repo.bzl  lock.bzl  lock_attrs.bzl  lock_common.bzl  lock_file.bzl  lock_file_repo.bzl  lock_import.bzl  lock_model.bzl  lock_repo.bzl  lock_repo_creation.bzl  lock_repos.bzl  lock_resolver.bzl  lock_workspace_repo.bzl  meson_recipe.bzl  modules_mapping.bzl  ninja_wrapper.bzl  override_helpers.bzl  package_annotation.bzl  package_repo.bzl  pdm_extension.bzl  pdm_lock_model.bzl  (+47 more)
pycross/profiles/: BUILD.bazel  cmake.bzl  flit.bzl  hatch.bzl  maturin.bzl  meson.bzl  setuptools.bzl  util.bzl
pycross/recipes/: BUILD.bazel  meson_recipe.bzl
pycross/settings/: BUILD.bazel
pycross/tests/: versions_test.bzl
tests/: BUILD.bazel  lock_model_test.bzl  starlark_lock_model_test.bzl
tests/analysis/: BUILD.bazel  cmake_build_test.bzl  conflict_check_aspect_test.bzl  console_script_test.bzl  extract_cc_layer_test.bzl  meson_build_test.bzl  mock.cc  mock.h  pep517_build_test.bzl  pycross_cc_pkg_config_test.bzl  pycross_wheel_headers_test.bzl  pycross_wheel_library_test.bzl  repaired_wheel_test.bzl  setuptools_build_test.bzl  test-1.0-py3-none-any.whl  tool.sh  transitions_test.bzl  wheel_transform_test.bzl
tests/e2e/: BUILD.bazel  build_and_test_all.sh  e2e_tests.bzl  run_integration_test.sh
tests/smoke/: .bazelrc  BUILD.bazel  WORKSPACE  pyproject.toml  test_shared.bzl  test_zstandard.py  testlib.bzl
tests/smoke_bzlmod/: MODULE.bazel  MODULE.bazel.no  testlib.bzl
tests/smoke_workspace/: .bazelrc  WORKSPACE  pyproject.toml
tests/unit/: BUILD.bazel  cc_toolchain_test.py  hooks_test.py  inspect_package_test.py  lifecycle_test.py  lock_model_conflict_test.py  lock_model_variant_test.py  meson_utils_test.py  pdm_translator_test.py  poetry_translator_test.py  pylock_translator_test.py  raw_lock_resolver_test.py  repair_wheel_hook_test.py  resolve_base_prefix_test.py  resolved_lock_renderer_test.py  sysconfig_utils_test.py  test_common_attrs.bzl  test_cycle_member_marker_deps.bzl  test_expand_pins.bzl  test_inspect_package.py  test_lock_resolver.bzl  test_override_helpers.bzl  test_parse_dependency_groups.bzl  test_pdm_translator.bzl  test_pep508.bzl  test_poetry_translator.bzl  test_pylock_translator.bzl  test_resolved_lock_renderer.bzl  test_sdist_dedup.bzl  test_thin_package_repo.bzl  test_uv_translator.bzl  test_variant_resolver.bzl  toml_lock_generator_test.py  translator_utils_test.py  uv_translator_test.py  venv_utils_test.py  wheel_installer_test.py  wheel_transformer_test.py
(+632 files in other folders)
