load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@bazel_gazelle//:def.bzl", "gazelle", "gazelle_binary")

gazelle_binary(
    name = "gazelle_bin",
    languages = ["@bazel_skylib//gazelle/bzl"],
)

gazelle(
    name = "gazelle",
    gazelle = "gazelle_bin",
)

bzl_library(
    name = "internal_deps",
    srcs = ["internal_deps.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_tools//tools/build_defs/repo:http.bzl",
        "@bazel_tools//tools/build_defs/repo:utils.bzl",
    ],
)


###
# Testing

config_setting(
    name = "darwin_x86",
    constraint_values = [
        "@platforms//os:macos",
        "@platforms//cpu:x86_64",
    ],
)

config_setting(
    name = "linux_x86",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

load("//pycross:defs.bzl", "pycross_target_environment", "pycross_lock_file")
pycross_target_environment(
    name = "python_darwin_x86_64",
    python_compatible_with = [
        "@platforms//os:macos",
        "@platforms//cpu:x86_64",
    ],
    version = "3.9.12",
    abis = ["cp39"],
    platforms = ["macosx_12_0_x86_64"],
)

pycross_target_environment(
    name = "python_darwin_arm64",
    python_compatible_with = [
        "@platforms//os:macos",
        "@platforms//cpu:arm64",
    ],
    version = "3.9.12",
    abis = ["cp39"],
    platforms = ["macosx_12_0_arm64"],
)

pycross_target_environment(
    name = "python_linux_x86_64",
    python_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    version = "3.9.12",
    abis = ["cp39"],
    platforms = ["manylinux2014_x86_64"] + [
        "manylinux_2_%s_x86_64" % str(i) for i in range(17, 25)
    ],
)

pycross_lock_file(
    name = "pclock",
    poetry_project_file = "pyproject.toml",
    poetry_lock_file = "poetry.lock",
    target_environments = [
        ":python_darwin_x86_64",
        ":python_darwin_arm64",
        ":python_linux_x86_64",
    ],
    file_url_overrides = {
        "xmltodict-0.12.0-py2.py3-none-any.whl": "https://files.pythonhosted.org/packages/3.7/x/xmltodict/xmltodict-0.12.0-py2.py3-none-any.whl",
    },
    out = "pclock.bzl",
)
