load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@bazel_skylib//rules:diff_test.bzl", "diff_test")
load("@gazelle//:def.bzl", "gazelle", "gazelle_binary")

# gazelle:exclude tests
# gazelle:exclude examples

gazelle_binary(
    name = "gazelle_bin",
    languages = [
        "@bazel_skylib_gazelle_plugin//bzl",
    ],
)

gazelle(
    name = "gazelle",
    gazelle = "gazelle_bin",
)

bzl_library(
    name = "internal_deps",
    srcs = ["internal_deps.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_tools//tools/build_defs/repo:http.bzl",
        "@bazel_tools//tools/build_defs/repo:utils.bzl",
    ],
)

diff_test(
    name = "test_pycross_deps_toml_diff",
    failure_message = "Please run `bazel run //pycross/private:update_pycross_deps`",
    file1 = "@rules_pycross_deps//:pycross_deps.toml",
    file2 = "//pycross/private:pycross_deps.toml",
)
