"""rules_pycross"""

module(
    name = "rules_pycross",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "bazel_lib", version = "3.1.0")
bazel_dep(name = "bazel_features", version = "1.11.0")
bazel_dep(name = "rules_cc", version = "0.2.18")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "0.0.4")
bazel_dep(name = "rules_python", version = "1.0.0")
bazel_dep(name = "rules_rust", version = "0.68.0")
bazel_dep(name = "toml.bzl", version = "0.4.1")

bazel_dep(name = "buildifier_prebuilt", version = "8.2.1", dev_dependency = True)

# Change this value to set the Python version we use in our repo venv.
PYTHON_VERSION = "3.13"

py_underscore_version = PYTHON_VERSION.replace(".", "_")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = PYTHON_VERSION)
use_repo(
    python,
    "python_%s" % py_underscore_version,
    "python_%s_host" % py_underscore_version,
    "python_versions",
    "pythons_hub",
)

pycross = use_extension("@rules_pycross//pycross/extensions:pycross.bzl", "pycross")
pycross.configure_environments()
pycross.configure_interpreter(
    python_defs_file = "@python_%s//:defs.bzl" % py_underscore_version,
    python_interpreter_target = "@python_%s_host//:python" % py_underscore_version,
)
pycross.configure_toolchains()
pycross.register_backend(
    name = "meson_build",
    pyproject_backends = [
        "mesonpy",
        "mesonbuild",
    ],
    rule_bzl = "@rules_pycross//pycross/private/build/rules:meson_build.bzl",
    tool_packages = [
        "meson",
        "ninja",
        "meson-python",
    ],
)
pycross.register_backend(
    name = "cmake_build",
    pyproject_backends = ["scikit_build_core.build"],
    rule_bzl = "@rules_pycross//pycross/private/build/rules:cmake_build.bzl",
    tool_packages = [
        "cmake",
        "ninja",
        "scikit-build-core",
    ],
)
pycross.register_backend(
    name = "maturin_build",
    pyproject_backends = ["maturin"],
    rule_bzl = "@rules_pycross//pycross/private/build/rules:maturin_build.bzl",
    sdist_repo_bzl = "@rules_pycross//pycross/private/bzlmod:maturin_sdist_repo.bzl",
    sdist_repo_fn = "maturin_sdist_repo",
    tool_packages = ["maturin"],
)
pycross.register_backend(
    name = "setuptools_build",
    pyproject_backends = [
        "setuptools.build_meta",
        "setuptools.build_meta:__legacy__",
    ],
    rule_bzl = "@rules_pycross//pycross/private/build/rules:setuptools_build.bzl",
    tool_packages = [
        "setuptools",
        "wheel",
    ],
)
pycross.register_backend(
    name = "pep517_build",
    default = True,
    pyproject_backends = [
        "hatchling.build",
        "flit_core.buildapi",
        "pdm.backend",
        "poetry.core.masonry.api",
    ],
    rule_bzl = "@rules_pycross//pycross/private/build/rules:pep517_build.bzl",
    tool_packages = [],
)
use_repo(
    pycross,
    "pycross_backends",
    "rules_pycross_internal",
)

toolchains = use_extension("@rules_pycross//pycross/private/bzlmod:toolchains.bzl", "toolchains")
toolchains.create_for_python_toolchains(name = "pycross_toolchains")
use_repo(toolchains, "pycross_toolchains")

register_toolchains("@pycross_toolchains//...")

environments = use_extension("@rules_pycross//pycross/extensions:environments.bzl", "environments")
environments.create_for_python_toolchains(name = "pycross_environments")
use_repo(environments, "pycross_environments")

lock_import = use_extension("@rules_pycross//pycross/extensions:lock_import.bzl", "lock_import")
use_repo(lock_import, "lock_import_repos_hub")

lock_repos = use_extension("@rules_pycross//pycross/extensions:lock_repos.bzl", "lock_repos")
lock_repos.create()

# TODO: patch-ng doesn't upload built wheels, only sdists, so we can't pull it
# normally through our rules (would create a bootstrapping problem).
# The library is a single file with no dependencies, we can just pull manually for now.
# See https://github.com/conan-io/python-patch-ng/issues/51
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "patch-ng",
    build_file_content = """
load("@rules_python//python:defs.bzl", "py_library")
py_library(
    name = "patch-ng",
    srcs = [":patch_ng.py"],
    imports = ["."],
    visibility = ["//visibility:public"],
)
""",
    integrity = "sha256-Gb4jkHC5YiT/XZXeW+PAEGEDYc3JKvhjRYj4yYaG7wg=",
    strip_prefix = "python-patch-ng-1.19.0",
    url = "https://github.com/conan-io/python-patch-ng/archive/refs/tags/1.19.0.tar.gz",
)

# Currently development-only
bazel_dep(name = "gazelle", version = "0.50.0", dev_dependency = True)
bazel_dep(name = "stardoc", version = "0.6.2", dev_dependency = True)
bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.5.0", dev_dependency = True)
