[project]
name = "rules_pycross"
version = "0.0"
authors = []
requires-python = ">=3.8"

[project.optional-dependencies]
# core dependencies are required by repo rules
core = [
    "dacite==1.6.0",
    "dep-logic==0.4.4",
    "installer==0.7.0",
    "packaging==23.2",
    "pip==23.3.1",
    "poetry-core==1.8.1",
    "tomli==2.0.1",
]
build = [
    "build==1.0.3",
]
repairwheel = [
    "repairwheel==0.3.1",
]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.pylint]
line-length = 120

[tool.flakeheaven]
max_line_length = 120

[tool.flakeheaven.plugins]
"flake8-*" = ["+*"]
flake8-import-restrictions = ["+I2043"]
pyflakes = ["+*", "-F541"]

[tool.flakeheaven.exceptions."**/*.md"]
pyflakes = ["-*"]
