[project]
name = "rules_pycross"
version = "0.0"
authors = []
requires-python = ">=3.10"

[project.optional-dependencies]
# core dependencies are required by repo rules
core = [
    "dacite==1.9.2",
    "installer==1.0.0",
    "packaging==26.2",
    "pip==26.1.1",
    "poetry-core==2.4.0",
    "tomli==2.4.1",
]
build = [
    "build==1.5.0",
]
repairwheel = [
    "repairwheel==0.4.0",
]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.pylint]
line-length = 120

[tool.flakeheaven]
max_line_length = 120

[tool.flakeheaven.plugins]
"flake8-*" = ["+*"]
flake8-import-restrictions = ["+I2043"]
pyflakes = ["+*", "-F541"]

[tool.flakeheaven.exceptions."**/*.md"]
pyflakes = ["-*"]
