load("@bazel_lib//lib:write_source_files.bzl", "write_source_files")
load("@stardoc//stardoc:stardoc.bzl", "stardoc")

package(default_visibility = ["//visibility:private"])

# rules
stardoc(
    name = "rules_gen",
    out = "rules.gen.md",
    input = "@rules_pycross//pycross:defs.bzl",
    deps = [
        "@rules_cc//cc:find_cc_toolchain_bzl",
        "@rules_pycross//pycross:defs",
    ],
)

# ext_environments
stardoc(
    name = "ext_environments_gen",
    out = "ext_environments.gen.md",
    input = "@rules_pycross//pycross/extensions:environments.bzl",
    deps = [
        "@rules_cc//cc:find_cc_toolchain_bzl",
        "@rules_pycross//pycross/extensions:environments",
    ],
)

# ext_lock_import
stardoc(
    name = "ext_lock_import_gen",
    out = "ext_lock_import.gen.md",
    input = "@rules_pycross//pycross/extensions:lock_import.bzl",
    deps = [
        "@rules_cc//cc:find_cc_toolchain_bzl",
        "@rules_pycross//pycross/extensions:lock_import",
    ],
)

# ext_lock_repos
stardoc(
    name = "ext_lock_repos_gen",
    out = "ext_lock_repos.gen.md",
    input = "@rules_pycross//pycross/extensions:lock_repos.bzl",
    deps = [
        "@rules_cc//cc:find_cc_toolchain_bzl",
        "@rules_pycross//pycross:backend",
        "@rules_pycross//pycross/extensions:lock_repos",
        "@rules_pycross_backend_maturin//private:maturin_sdist_hook",
    ],
)

# ext_pycross
stardoc(
    name = "ext_pycross_gen",
    out = "ext_pycross.gen.md",
    input = "@rules_pycross//pycross/extensions:pycross.bzl",
    deps = [
        "@rules_cc//cc:find_cc_toolchain_bzl",
        "@rules_pycross//pycross/extensions:pycross",
    ],
)

# backend_maturin rules
stardoc(
    name = "maturin_rules_gen",
    out = "maturin_rules.gen.md",
    input = "@rules_pycross_backend_maturin//:defs.bzl",
    deps = [
        "@rules_pycross_backend_maturin//:defs",
    ],
)

# backend_maturin extension
stardoc(
    name = "ext_maturin_gen",
    out = "ext_maturin.gen.md",
    input = "@rules_pycross_backend_maturin//extensions:maturin.bzl",
    deps = [
        "@rules_cc//cc:find_cc_toolchain_bzl",
        "@rules_pycross_backend_maturin//extensions:maturin",
    ],
)

# setuptools extension
stardoc(
    name = "ext_setuptools_gen",
    out = "ext_setuptools.gen.md",
    input = "@rules_pycross//pycross/backends:setuptools.bzl",
    deps = [
        "@rules_cc//cc:find_cc_toolchain_bzl",
        "@rules_pycross//pycross/backends:setuptools",
    ],
)

# meson extension
stardoc(
    name = "ext_meson_gen",
    out = "ext_meson.gen.md",
    input = "@rules_pycross//pycross/backends:meson.bzl",
    deps = [
        "@rules_cc//cc:find_cc_toolchain_bzl",
        "@rules_pycross//pycross/backends:meson",
    ],
)

# cmake extension
stardoc(
    name = "ext_cmake_gen",
    out = "ext_cmake.gen.md",
    input = "@rules_pycross//pycross/backends:cmake.bzl",
    deps = [
        "@rules_cc//cc:find_cc_toolchain_bzl",
        "@rules_pycross//pycross/backends:cmake",
    ],
)

# Update and test checked-in docs
write_source_files(
    name = "update",
    files = {
        "rules.md": ":rules_gen",
        "ext_environments.md": ":ext_environments_gen",
        "ext_lock_import.md": ":ext_lock_import_gen",
        "ext_lock_repos.md": ":ext_lock_repos_gen",
        "ext_pycross.md": ":ext_pycross_gen",
        "maturin_rules.md": ":maturin_rules_gen",
        "ext_maturin.md": ":ext_maturin_gen",
        "ext_setuptools.md": ":ext_setuptools_gen",
        "ext_meson.md": ":ext_meson_gen",
        "ext_cmake.md": ":ext_cmake_gen",
    },
)
