load("@bazel_lib//lib:write_source_files.bzl", "write_source_files")
load("@stardoc//stardoc:stardoc.bzl", "stardoc")

package(default_visibility = ["//visibility:private"])

# rules
stardoc(
    name = "rules_gen",
    out = "rules.gen.md",
    input = "@rules_pycross//pycross:defs.bzl",
    deps = [
        "@rules_cc//cc:find_cc_toolchain_bzl",
        "@rules_pycross//pycross:defs",
    ],
)

# ext_pycross
stardoc(
    name = "ext_pycross_gen",
    out = "ext_pycross.gen.md",
    input = "@rules_pycross//pycross/extensions:pycross.bzl",
    deps = [
        "@rules_cc//cc:find_cc_toolchain_bzl",
        "@rules_pycross//pycross/extensions:pycross",
    ],
)

# backend_maturin rules
stardoc(
    name = "maturin_rules_gen",
    out = "maturin_rules.gen.md",
    input = "@rules_pycross_backend_maturin//:defs.bzl",
    deps = [
        "@rules_pycross_backend_maturin//:defs",
    ],
)

# backend_maturin extension
stardoc(
    name = "ext_maturin_gen",
    out = "ext_maturin.gen.md",
    input = "@rules_pycross_backend_maturin//extensions:maturin.bzl",
    deps = [
        "@rules_cc//cc:find_cc_toolchain_bzl",
        "@rules_pycross_backend_maturin//extensions:maturin",
        "@rules_pycross_backend_maturin//private:cargo_lock_repo",
    ],
)

# setuptools_rust extension
stardoc(
    name = "ext_setuptools_rust_gen",
    out = "ext_setuptools_rust.gen.md",
    input = "@rules_pycross_backend_maturin//extensions:setuptools_rust.bzl",
    deps = [
        "@rules_cc//cc:find_cc_toolchain_bzl",
        "@rules_pycross_backend_maturin//extensions:setuptools_rust",
        "@rules_pycross_backend_maturin//private:cargo_lock_repo",
    ],
)

# setuptools extension
stardoc(
    name = "ext_setuptools_gen",
    out = "ext_setuptools.gen.md",
    input = "@rules_pycross//pycross/backends:setuptools.bzl",
    deps = [
        "@rules_cc//cc:find_cc_toolchain_bzl",
        "@rules_pycross//pycross/backends:setuptools",
    ],
)

# meson extension
stardoc(
    name = "ext_meson_gen",
    out = "ext_meson.gen.md",
    input = "@rules_pycross//pycross/backends:meson.bzl",
    deps = [
        "@rules_cc//cc:find_cc_toolchain_bzl",
        "@rules_pycross//pycross/backends:meson",
    ],
)

# cmake extension
stardoc(
    name = "ext_cmake_gen",
    out = "ext_cmake.gen.md",
    input = "@rules_pycross//pycross/backends:cmake.bzl",
    deps = [
        "@rules_cc//cc:find_cc_toolchain_bzl",
        "@rules_pycross//pycross/backends:cmake",
    ],
)

# Update and test checked-in docs
write_source_files(
    name = "update",
    files = {
        "rules.md": ":rules_gen",
        "ext_pycross.md": ":ext_pycross_gen",
        "maturin_rules.md": ":maturin_rules_gen",
        "ext_maturin.md": ":ext_maturin_gen",
        "ext_setuptools_rust.md": ":ext_setuptools_rust_gen",
        "ext_setuptools.md": ":ext_setuptools_gen",
        "ext_meson.md": ":ext_meson_gen",
        "ext_cmake.md": ":ext_cmake_gen",
    },
)
