load("@bazel_lib//lib:write_source_files.bzl", "write_source_files")
load("@stardoc//stardoc:stardoc.bzl", "stardoc")

package(default_visibility = ["//visibility:private"])

# rules
stardoc(
    name = "rules_gen",
    out = "rules.gen.md",
    input = "@rules_pycross//pycross:defs.bzl",
    deps = [
        "@rules_cc//cc:find_cc_toolchain_bzl",
        "@rules_pycross//pycross:defs",
    ],
)

BACKEND_HOOK_DEPS = [
    "@rules_pycross_backend_maturin//private:cargo_lock_package_repo_hook",
    "@rules_pycross_backend_maturin//private:maturin_sdist_hook",
    "@rules_pycross_backend_maturin//private:setuptools_rust_sdist_hook",
]

# ext_pycross
stardoc(
    name = "ext_pycross_gen",
    out = "ext_pycross.gen.md",
    input = "@rules_pycross//pycross/extensions:pycross.bzl",
    deps = [
        "@rules_cc//cc:find_cc_toolchain_bzl",
        "@rules_pycross//pycross/extensions:pycross",
    ] + BACKEND_HOOK_DEPS,
)

# backend_maturin rules
stardoc(
    name = "maturin_rules_gen",
    out = "maturin_rules.gen.md",
    input = "@rules_pycross_backend_maturin//:defs.bzl",
    deps = [
        "@rules_pycross_backend_maturin//:defs",
    ],
)

# backend_maturin extension
stardoc(
    name = "ext_maturin_gen",
    out = "ext_maturin.gen.md",
    input = "@rules_pycross_backend_maturin//extensions:maturin.bzl",
    deps = [
        "@rules_cc//cc:find_cc_toolchain_bzl",
        "@rules_pycross_backend_maturin//extensions:maturin",
        "@rules_pycross_backend_maturin//private:cargo_lock_package_repo_hook",
        "@rules_pycross_backend_maturin//private:cargo_lock_repo",
    ],
)

# setuptools_rust extension
stardoc(
    name = "ext_setuptools_rust_gen",
    out = "ext_setuptools_rust.gen.md",
    input = "@rules_pycross_backend_maturin//extensions:setuptools_rust.bzl",
    deps = [
        "@rules_cc//cc:find_cc_toolchain_bzl",
        "@rules_pycross_backend_maturin//extensions:setuptools_rust",
        "@rules_pycross_backend_maturin//private:cargo_lock_package_repo_hook",
        "@rules_pycross_backend_maturin//private:cargo_lock_repo",
    ],
)

# setuptools extension
stardoc(
    name = "ext_setuptools_gen",
    out = "ext_setuptools.gen.md",
    input = "@rules_pycross//pycross/backends:setuptools.bzl",
    deps = [
        "@rules_cc//cc:find_cc_toolchain_bzl",
        "@rules_pycross//pycross/backends:setuptools",
    ],
)

# meson extension
stardoc(
    name = "ext_meson_gen",
    out = "ext_meson.gen.md",
    input = "@rules_pycross//pycross/backends:meson.bzl",
    deps = [
        "@rules_cc//cc:find_cc_toolchain_bzl",
        "@rules_pycross//pycross/backends:meson",
    ],
)

# cmake extension
stardoc(
    name = "ext_cmake_gen",
    out = "ext_cmake.gen.md",
    input = "@rules_pycross//pycross/backends:cmake.bzl",
    deps = [
        "@rules_cc//cc:find_cc_toolchain_bzl",
        "@rules_pycross//pycross/backends:cmake",
    ],
)

# uv extension
stardoc(
    name = "ext_uv_gen",
    out = "ext_uv.gen.md",
    input = "@rules_pycross//pycross/extensions:uv.bzl",
    deps = [
        "@rules_cc//cc:find_cc_toolchain_bzl",
        "@rules_pycross//pycross/extensions:uv",
    ] + BACKEND_HOOK_DEPS,
)

# poetry extension
stardoc(
    name = "ext_poetry_gen",
    out = "ext_poetry.gen.md",
    input = "@rules_pycross//pycross/extensions:poetry.bzl",
    deps = [
        "@rules_cc//cc:find_cc_toolchain_bzl",
        "@rules_pycross//pycross/extensions:poetry",
    ] + BACKEND_HOOK_DEPS,
)

# pdm extension
stardoc(
    name = "ext_pdm_gen",
    out = "ext_pdm.gen.md",
    input = "@rules_pycross//pycross/extensions:pdm.bzl",
    deps = [
        "@rules_cc//cc:find_cc_toolchain_bzl",
        "@rules_pycross//pycross/extensions:pdm",
    ] + BACKEND_HOOK_DEPS,
)

# pylock extension
stardoc(
    name = "ext_pylock_gen",
    out = "ext_pylock.gen.md",
    input = "@rules_pycross//pycross/extensions:pylock.bzl",
    deps = [
        "@rules_cc//cc:find_cc_toolchain_bzl",
        "@rules_pycross//pycross/extensions:pylock",
    ] + BACKEND_HOOK_DEPS,
)

# backends extension
stardoc(
    name = "ext_backends_gen",
    out = "ext_backends.gen.md",
    input = "@rules_pycross//pycross/extensions:backends.bzl",
    deps = [
        "@rules_cc//cc:find_cc_toolchain_bzl",
        "@rules_pycross//pycross/extensions:backends",
    ],
)

# pep517 backend
stardoc(
    name = "ext_pep517_gen",
    out = "ext_pep517.gen.md",
    input = "@rules_pycross//pycross/backends:pep517.bzl",
    deps = [
        "@rules_cc//cc:find_cc_toolchain_bzl",
        "@rules_pycross//pycross/backends:pep517",
    ],
)

# Update and test checked-in docs
write_source_files(
    name = "update",
    files = {
        "rules.md": ":rules_gen",
        "ext_pycross.md": ":ext_pycross_gen",
        "maturin_rules.md": ":maturin_rules_gen",
        "ext_maturin.md": ":ext_maturin_gen",
        "ext_setuptools_rust.md": ":ext_setuptools_rust_gen",
        "ext_setuptools.md": ":ext_setuptools_gen",
        "ext_meson.md": ":ext_meson_gen",
        "ext_cmake.md": ":ext_cmake_gen",
        "ext_uv.md": ":ext_uv_gen",
        "ext_poetry.md": ":ext_poetry_gen",
        "ext_pdm.md": ":ext_pdm_gen",
        "ext_pylock.md": ":ext_pylock_gen",
        "ext_backends.md": ":ext_backends_gen",
        "ext_pep517.md": ":ext_pep517_gen",
    },
)
