[tool.poetry]
name = "rules_pycross_example"
version = "0.1"
description = "rules_pycross"
authors = []

[tool.poetry.dependencies]
python = "~=3.9"

ipython = ">=8.0.1"
moto = {version = "=3.1.1", extras = ["server", "all"]}
SQLAlchemy-Utils = "=0.38.2"
cognitojwt = "*"
python-jose = "=3.1.0"
numpy = "=1.22.3"
Cython = ">=0.29.24,<3.0"
setuptools = "=59.2.0"
wheel = "=0.37.0"
setproctitle = "=1.2.2"
numpy = "=1.22.3"
tree-sitter = "=0.20.0"
Cython = ">=0.29.24,<3.0"
setuptools = "=59.2.0"
wheel = "=0.37.0"