load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

# For stardoc to reference the files
exports_files([
    "defs.bzl",
])

toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//pycross/private:console_script",
        "//pycross/private:pdm_lock_model",
        "//pycross/private:poetry_lock_model",
        "//pycross/private:pypi_file",
        "//pycross/private:target_environment",
        "//pycross/private:uv_lock_model",
        "//pycross/private:wheel_library",
        "//pycross/private/build:cc_pkg_config",
        "//pycross/private/build:repaired_wheel",
        "//pycross/private/build:wheel_headers",
    ],
)

bzl_library(
    name = "toolchain",
    srcs = ["toolchain.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//pycross/private:providers",
        "@bazel_skylib//lib:paths",
    ],
)
