load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

# For stardoc to reference the files
exports_files([
    "defs.bzl",
    "backend.bzl",
])

toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//pycross/private:dist_info",
        "//pycross/private:modules_mapping",
        "//pycross/private:pdm_lock_model",
        "//pycross/private:poetry_lock_model",
        "//pycross/private:pypi_file",
        "//pycross/private:target_environment",
        "//pycross/private:uv_lock_model",
        "//pycross/private:wheel_library",
        "//pycross/private:wheel_transform",
        "//pycross/private:wheel_zipimport_library",
        "//pycross/private/build:cc_pkg_config",
        "//pycross/private/build:repaired_wheel",
        "//pycross/private/build:wheel_build",
        "//pycross/private/build:wheel_headers",
        "@bazel_skylib//rules:common_settings",
    ],
)

bzl_library(
    name = "backend",
    srcs = ["backend.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//pycross/private:lock_attrs",
        "//pycross/private:override_helpers",
        "//pycross/private:providers",
        "//pycross/private/build:transitions",
        "//pycross/private/build/actions:cc_layer",
        "//pycross/private/build/actions:pep517_action",
        "//pycross/private/build/actions:repair_action",
        "//pycross/private/build/actions:tool_extract",
        "//pycross/private/build/rules:common_attrs",
    ],
)

bzl_library(
    name = "toolchain",
    srcs = ["toolchain.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//pycross/private:providers",
        "@bazel_skylib//lib:paths",
    ],
)
