bazel_dep(name = "llvm", version = "0.8.3")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.18")
bazel_dep(name = "rules_python", version = "2.0.0")
bazel_dep(name = "rules_pycross", version = "0.0.0")
bazel_dep(name = "rules_pycross_backend_maturin", version = "0.0.0")
bazel_dep(name = "bazel_lib", version = "3.1.0")
bazel_dep(name = "rules_rust", version = "0.68.0")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    extra_target_triples = [
        "aarch64-apple-darwin",
        "aarch64-unknown-linux-gnu",
        "x86_64-unknown-linux-gnu",
    ],
)

local_path_override(
    module_name = "rules_pycross",
    path = "../..",
)

local_path_override(
    module_name = "rules_pycross_backend_maturin",
    path = "../../modules/backend_maturin",
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.14.2",
)
use_repo(python, "python_versions")

pycross = use_extension("@rules_pycross//pycross/extensions:pycross.bzl", "pycross")
pycross.configure_environments(
    glibc_version = "2.35",
    platforms = [
        "aarch64-apple-darwin",
        "aarch64-unknown-linux-gnu",
        "x86_64-unknown-linux-gnu",
        "x86_64-unknown-linux-musl",
    ],
    python_versions = [
        "3.14.2",
    ],
)

# Use the lock_import extension to import external lock files.
lock_import = use_extension("@rules_pycross//pycross/extensions:lock_import.bzl", "lock_import")

# Import from uv
lock_import.import_uv(
    default_alias_single_version = True,
    lock_file = "//:uv.lock",
    project_file = "//:pyproject.toml",
    repo = "uv",
)
lock_import.package(
    name = "rpds-py",
    always_build = True,
    repo = "uv",
)
lock_import.package(
    name = "captcha-rs",
    always_build = True,
    repo = "uv",
)
lock_import.override_source(file = "@maturin_overrides//:overrides.json")

maturin = use_extension("@rules_pycross_backend_maturin//extensions:maturin.bzl", "maturin")
maturin.override(
    name = "rpds-py",
    repo = "uv",
)
maturin.override(
    name = "captcha-rs",
    cargo_lock = "//:captcha_rs.lock",
    repo = "uv",
)
use_repo(maturin, "maturin_overrides", "uv_cargo")

lock_repos = use_extension("@rules_pycross//pycross/extensions:lock_repos.bzl", "lock_repos")
use_repo(lock_repos, "uv")

register_toolchains("@llvm//toolchain:all")
