[project]
name = "rules-pycross-e2e-maturin"
version = "0.1.0"
description = "E2E tests for Maturin/Rust wheel builds"
authors = []
dependencies = [
    "rpds-py==0.23.0",
    "captcha-rs==0.1.1",
    "maturin",
]
requires-python = "~=3.14.0"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
